welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int(10)
 required: Boolean
if ((-10<(n-100)<10) || (-10<(n-200)<10)) return true
                 ^