welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
if ((-10<(n-100)<10) || (-10<(n-200)<10)) return true
else return false
}